<resources>
    <string name="app_name">VnChat</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="description_sign_in">Vui lòng nhập số điện thoại và mật khẩu để đăng nhập </string>
    <string name="description_sign_up">Vui lòng nhập số điện thoại và tên thật để đăng ký</string>
    <string name="phone">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="name">Tên của bạn</string>
    <string name="forget_password">Quên mật khẩu?</string>
    <string name="message">Tin nhắn</string>
    <string name="contact">Liên hệ</string>
    <string name="diary">Nhật ký</string>
    <string name="add">Thêm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search">Tìm bạn bè, tin nhắn ...</string>
    <string name="how_are_you">Hôm nay bạn thế nào?</string>
    <string name="up_image">Đăng hình</string>
    <string name="up_video">Đăng video</string>
    <string name="up_background">Hình nền</string>
    <string name="story">Khoảnh khắc</string>
    <string name="limits_public">Công khai</string>
    <string name="create_post">Đăng</string>
    <string name="what_do_you_think">Bạn đang nghĩ gì?</string>
    <string name="add_details_post">Thêm vào bài viết của bạn</string>
    <string name="add_image_video">Ảnh/Video</string>
    <string name="add_check_in">Check in</string>
    <string name="add_feel">Cảm xúc/Hoạt động</string>
    <string name="limits">Quyền xem</string>
    <string name="have_err">Có lỗi xảy ra!!</string>
    <string name="man">Nam</string>
    <string name="woman">Nữ</string>
    <string name="diff">Khác</string>
</resources>
