<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dark"
    android:orientation="vertical"
    tools:context=".src.module.sign_up.view.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_SignUp"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:title="@string/sign_up"
        app:titleTextColor="@color/color_white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin15"
        android:text="@string/description_sign_up"
        android:theme="@style/TextView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        android:background="@drawable/custom_edittext"
        android:hint="@string/name"
        android:paddingStart="@dimen/margin10"
        android:textColorHint="@color/color_white"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPhoneSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        android:background="@drawable/custom_edittext"
        android:hint="@string/phone"
        android:paddingStart="@dimen/margin10"
        android:textColorHint="@color/color_white"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        android:background="@drawable/custom_edittext"
        android:hint="@string/password"
        android:paddingStart="@dimen/margin10"
        android:textColorHint="@color/color_white"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:text="@string/man" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:text="@string/woman" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:text="@string/diff" />


    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFloatSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/margin15"
        android:background="@color/color_blue"
        android:padding="@dimen/margin10"
        android:src="@drawable/ic_arrow_forward_black_24dp"
        app:fabSize="normal"
        tools:ignore="RtlHardcoded" />

    <ProgressBar
        android:id="@+id/progressSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>

