<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dark"
    android:orientation="vertical"
    tools:context=".src.module.sign_in.view.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_SignIn"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:title="@string/sign_in"
        app:titleTextColor="@color/color_white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin15"
        android:text="@string/description_sign_in"
        android:theme="@style/TextView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPhoneSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        android:text="mrlongg71@gmail.com"
        android:background="@drawable/custom_edittext"
        android:hint="@string/phone"
        android:paddingStart="@dimen/margin10"
        android:textColor="@color/color_white"
        android:textColorHint="@color/color_white"
        tools:ignore="RtlSymmetry" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPasswordSignIn"
        android:layout_width="match_parent"
        android:text="123456"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        android:background="@drawable/custom_edittext"
        android:hint="@string/password"
        android:paddingStart="@dimen/margin10"
        android:textColor="@color/color_white"
        android:textColorHint="@color/color_white"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="411dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/margin15"
        android:text="@string/forget_password"
        android:textColor="@color/color_blue"
        android:textSize="@dimen/text15" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFloatSingIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/margin15"
        android:backgroundTint="@color/color_blue"
        android:padding="@dimen/margin10"
        android:src="@drawable/ic_arrow_forward_black_24dp"
        app:fabSize="normal" />

    <ProgressBar
        android:id="@+id/progressSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>
