<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_dark_violet"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="70dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:id="@+id/img_arrow_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="Arrow Down"
        android:src="@drawable/ic_arrow_drop_up"
        tools:ignore="HardcodedText" />



        <TextView
            style="@style/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/margin5"
            android:gravity="center"
            android:drawableStart="@drawable/ic_plus"
            android:text="@string/add_details_post"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text15" />



    <TextView
        style="@style/TextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin15"
        android:drawableStart="@drawable/ic_broken_image"
        android:drawablePadding="@dimen/margin10"
        android:text="@string/add_image_video" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin5"
        android:background="@color/color_gray2" />

    <TextView
        style="@style/TextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin15"
        android:drawableStart="@drawable/ic_person_place"
        android:drawablePadding="@dimen/margin10"
        android:text="@string/add_check_in" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin5"
        android:background="@color/color_gray2" />

    <TextView
        style="@style/TextView2"
        android:layout_marginBottom="@dimen/margin55"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin15"
        android:drawableStart="@drawable/ic_mood"
        android:drawablePadding="@dimen/margin10"
        android:text="@string/add_feel" />


</LinearLayout>